# tizonia-openmax-il

./: .gitignore
clients/: configure.ac
clients/plex/: Makefile.am  configure.ac
clients/plex/libtizplex/: Makefile.am  configure.ac  libtizplex.pc.in
clients/plex/libtizplex/src/: Makefile.am  tizplex.cpp  tizplex.hpp  tizplex_c.cpp  tizplex_c.h
clients/plex/libtizplex/tests/: Makefile.am  check_tizplex.c
clients/plex/plexproxy/: Makefile.am  setup.py  tizplexproxy.py
player/src/: Makefile.am
player/src/services/plex/: tizplexconfig.hpp  tizplexgraph.cpp  tizplexgraph.hpp  tizplexgraphops.cpp  tizplexgraphops.hpp  tizplexmgr.cpp  tizplexmgr.hpp
